<resources>
    <string name="app_name">Calculadora Simples</string>
    <string name="canal">Japasoft Softwares</string>
    <string name="somar">SOMAR</string>
    <string name="subtrair">SUBTRAIR</string>
    <string name="multiplicar">MULTIPLICAR</string>
    <string name="dividir">DIVIDIR</string>
    <string name="valor1">Digite o primeiro valor</string>
    <string name="valor2">Digite o segundo valor</string>
    <string name="calcular">CALCULAR</string>
    <string name="_0">0</string>
    <string name="operacao">operacao</string>
</resources>